--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -1,3 +1,7 @@
+repositories {
+	maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     implementation (name: 'RobotCore-release', ext: 'aar')
@@ -6,4 +10,5 @@ dependencies {
     implementation (name: 'WirelessP2p-release', ext:'aar')
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+	implementation 'com.github.MICDSRobotics-5190:robotplus-standalone:master-SNAPSHOT'
 }
