--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ android:
   - tools
   - platform-tools
   - build-tools-27.0.3
+  - build-tools-28.0.3
   - android-19 #Minimum API Version
   - android-23 #Target API Version
   - android-26 #Newest API Version
+  - android-28
   - extra-google-google_play_services
   - extra-google-m2repository #linter and some other extras
   - extra-android-m2repository
